added splash page.
