# controllers/fileUploadController.js
@@ -6,7 +6,48 @@ const multer = require('multer');
 const csvParser = require('csv-parser');
 const upload = multer({ storage: multer.memoryStorage() });
 
-
+/**
+ * @swagger
+ /upload:
+    post:
+      tags:
+      - upload
+      summary: uploads a file
+      description: uploads a file. Will be expanded later.
+      operationId: handleFileUpload
+      parameters:
+      - name: additionalMetadata
+        in: query
+        description: Additional Metadata
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/upload_body'
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+        "400":
+          description: unsuccessful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+      security:
+      - teamgame_auth:
+        - write:teams
+        - read:teams
+      x-swagger-router-controller: fileUploadController
+*/
 function handleFileUpload(req, res) {
   console.log('handleFileUpload called')
   console.log(req.csvFile)
