# swagger-server/api/openapi.yaml
@@ -49,7 +49,7 @@ paths:
       - upload
       summary: uploads a file
       description: uploads a file. Will be expanded later.
-      operationId: upload
+      operationId: handleFileUpload
       parameters:
       - name: additionalMetadata
         in: query
@@ -81,7 +81,7 @@ paths:
       - teamgame_auth:
         - write:teams
         - read:teams
-      x-swagger-router-controller: Upload
+      x-swagger-router-controller: fileUploadController
   /team:
     get:
       tags:
